Imported from https://koen-struyve@github.com/koen-struyve/nfs-ganesha.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[project]
+	description = NFS-Ganesha is an NFSv3,v4,v4.1 fileserver that runs in user mode on most UNIX/Linux systems
+[access "refs/*"]
+	owner = group user/koen-struyve
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/koen-struyve
+	label-Verified = -1..+1 group user/koen-struyve
+	push = group user/koen-struyve
+	read = group user/koen-struyve
+	rebase = group user/koen-struyve
+	removeReviewer = group user/koen-struyve
+	submit = group user/koen-struyve
+[access "refs/heads/*"]
+	create = group user/koen-struyve
+	push = +force group user/koen-struyve
+	pushMerge = group user/koen-struyve
+	read = group user/koen-struyve
+[access "refs/tags/*"]
+	push = group user/koen-struyve
+	push = +force group user/koen-struyve
