--- a/project.config
+++ b/project.config
@@ -3,6 +3,7 @@
 [submit]
 [project]
 	description = NFS-Ganesha is an NFSv3,v4,v4.1 fileserver that runs in user mode on most UNIX/Linux systems
+	state = hidden
 [access "refs/*"]
 	owner = group user/koen-struyve
 [access "refs/for/refs/*"]
